applications/mindspore-reproducible/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: mindspore-reproducible
  name: mindspore-reproducible
