applications/mindspore-reproducible/website-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: website-deployment
  namespace: mindspore-reproducible
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/mindspore/mindspore-reproducible-website:c103ab72e87c87a663d64375b2fc4154d44d28e5
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
