applications/mindspore-reproducible/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: mindspore-reproducible-ingress
  namespace: mindspore-reproducible
spec:
  tls:
  - hosts:
      - reproducible-builds.mindspore.cn
    secretName: mindspore-reproducible-tls
  rules:
    - host: reproducible-builds.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: website-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: mindspore-reproducible-server-ingress
  namespace: mindspore-reproducible
spec:
  tls:
  - hosts:
      - reproducible-builds.mindspore.cn
    secretName: mindspore-reproducible-server-tls
  rules:
    - host: reproducible-builds.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: backend-service
              servicePort: 80
            path: /api
